# DA-Radar

./: .gitignore  CLAUDE.md  IMPROVEMENT_BACKLOG.md  PROGRESS.md  README.md  pyproject.toml
.claude/agents/: hk-radar-analyst.md  hk-radar-improve.md  hk-radar-verifier.md  radar-analyst.md  radar-verifier.md
.github/workflows/: analyze.yml  audit.yml  correction.yml  deploy.yml  improve.yml  pr-check.yml  watch.yml
config/: jurisdiction.json  site.json
config/jurisdictions/: ch.json  eu.json  hk.json  jp.json  sg.json  uae.json  uk.json  us.json
content/: document_library.json  start_here.json  trajectory.json
content/ch/: document_library.json  orientation.json  trajectory.json
content/eu/: document_library.json  orientation.json  trajectory.json
content/glossary/: amlo.json  fstb.json  hkma.json  leap-framework.json  regulated-activity-types.json  security-token.json  sfc.json  sfo.json  stablecoin.json  tokenisation.json  vatp.json
content/hk/: document_library.json  trajectory.json
content/jp/: document_library.json  orientation.json  trajectory.json
content/pillar_states/: aml_cft_enforcement.json  banking_money.json  dealing_custody_advisory.json  exchanges_vatp.json  funds_etfs.json  stablecoins.json  tokenization_rwa.json
content/sg/: document_library.json  orientation.json  trajectory.json
content/uae/: document_library.json  orientation.json  trajectory.json
content/uk/: document_library.json  orientation.json  trajectory.json
content/us/: document_library.json  orientation.json  trajectory.json
data/: ledger.json  queue.json
data/audit/: latest.json
data/ch/: ledger.json  queue.json  watch_status.json
data/eu/: ledger.json  queue.json  watch_status.json
data/hk/: ledger.json  queue.json
data/jp/: ledger.json  queue.json  watch_status.json
data/sg/: ledger.json  queue.json  watch_status.json
data/uae/: ledger.json  queue.json  watch_status.json
data/uk/: ledger.json  queue.json  watch_status.json
data/us/: ledger.json  queue.json  watch_status.json
docs/: analyst-runbook.md  improve-runbook.md
pipeline/: http.py
pipeline/audit/: feed_health.py  linkrot.py  pass_rate.py  run.py  staleness.py
pipeline/ci/: apply_correction.py  apply_verification_gate.py  improve_queue.py  improve_scope.py  path_allowlist.py  promote_drafted.py  promote_verified.py  prompt_change_justification.py  queue_check.py  seed_backfill.py  validate_content.py
pipeline/prompts/: analyst_prompt.md  improve_prompt.md  verifier_prompt.md
pipeline/schemas/: card.json  corrections.json  document_library.json  glossary.json  improve_queue.json  jurisdiction.json  ledger.json  orientation.json  pillar_state.json  queue.json  site.json  start_here.json  trajectory.json  watch_status.json
pipeline/site/: data.py  generate.py
pipeline/verify/: authenticity.py  docfetch.py  gate.py  numeric_claims.py  quote_policy.py
pipeline/watcher/: classify.py  clock.py  document_library.py  fetch.py  (+7 more)
tests/: conftest.py  test_analyze_pipeline_integration.py  test_apply_correction.py  test_apply_verification_gate.py  test_atom.py  test_audit_feed_health.py  test_audit_linkrot.py  test_audit_pass_rate.py  test_audit_run.py  test_audit_staleness.py  test_authenticity.py  test_classify.py  test_docfetch.py  test_document_library.py  test_fetch.py  test_gate.py  test_hashing.py  test_html_diff.py  test_improve_queue.py  test_improve_scope.py  test_json_api.py  test_jurisdiction_agnostic.py  test_ledger.py  test_ledger_lifecycle.py  test_numeric_claims.py  test_parse.py  test_path_allowlist.py  test_promote_drafted.py  test_promote_verified.py  test_prompt_change_justification.py  test_queue.py  test_queue_check.py  test_quote_policy.py  test_relevance.py  test_run_integration.py  test_run_mechanism_dispatch.py  test_schemas.py  test_seed_backfill.py  test_site_generate.py  test_sitemap_diff.py  (+1 more)
(+285 files in other folders)
