[project]
name = "hk-digital-asset-radar"
version = "0.1.0"
description = "Self-learning regulatory-watch pipeline for the HK Digital Asset Radar project."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "jsonschema>=4.21",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests-mock>=1.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
