[project]
name = "hk-digital-asset-radar"
version = "0.1.0"
description = "Self-learning regulatory-watch pipeline for the HK Digital Asset Radar project."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "jsonschema>=4.21",
    "defusedxml>=0.7.1",
    "pypdf>=4.0",
    "jinja2>=3.1",
    # P8's html_diff watcher mechanism (pipeline/watcher/mechanisms/html_diff.py):
    # parses regulator HTML listing pages that publish no RSS/Atom feed.
    # Used on the stdlib html.parser backend deliberately, never lxml --
    # avoids a C-extension dependency and keeps XML-entity attack surface
    # at zero for untrusted fetched HTML. soupsieve (the CSS-selector
    # engine behind BeautifulSoup.select()) comes along as bs4's own
    # transitive dependency; pinned explicitly too since this module
    # depends on its selector support directly, not just incidentally.
    "beautifulsoup4>=4.12",
    "soupsieve>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "requests-mock>=1.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Real bug found via CI, not locally: tests/ has no __init__.py, and the
# bare `pytest` console-script entry point (unlike `python -m pytest`,
# which always puts cwd on sys.path) does not add the repo root to
# sys.path on its own -- so `from tests.conftest import ...` failed with
# ModuleNotFoundError under plain `pytest -q`, exactly what CI runs,
# while every local `python -m pytest -q` run stayed green throughout
# development and masked it completely. This makes the fix invocation-
# independent (bare `pytest`, `python -m pytest`, any CI runner) rather
# than special-casing one workflow's run command.
pythonpath = ["."]
